[package]
name = "rauts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
ocpp = { "git" = "ssh://git@github.com/mobilityhouse/rocpp.git", "branch" = "master" }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
